--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -16,7 +16,7 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 						<div class="stat-figure text-gray-400 bg-base-300">
 							<a
 								href="#"
-								class="absolute top-0 right-8  z-50"
+								class="absolute -top-1 right-8 z-50"
 								title={"Set " + zone[0] + " as default location"}
 							>
 								<input id={"toggle-heart_" + zone[0]} type="checkbox" />
@@ -25,7 +25,7 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 									aria-label="like"
 									class="inline-block w-2 h-2 stroke-current"
 								>
-									<span class="text-lg">♥</span>
+									<span class="text-sm">♥</span>
 								</label>{" "}
 							</a>
 						</div>
@@ -33,8 +33,8 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 							<div
 								class={
 									zone.indexOf(zoneParam) == 0
-										? "mb-2 stat-title text-white"
-										: "mb-2 stat-title text-gray-400"
+										? "hidden mb-2 stat-title text-white"
+										: "hidden mb-2 stat-title text-gray-400"
 								}
 							>
 								{zone[0]}
