--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -45,7 +45,7 @@ const states =
 				</div>
 				<!--				<div class="p-0 collapse-content overflow-y-auto">-->
 				<div
-					class="p-0 overflow-hidden overflow-y-auto collapse-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+					class="p-0 overflow-y-auto collapse-content peer-checked:bg-secondary peer-checked:text-secondary-content"
 				>
 					<SelectDaerah states={states} zones={zones} />
 				</div>
