--- a/src/pages/[state].astro
+++ b/src/pages/[state].astro
@@ -33,7 +33,7 @@ const { zones } = Astro.props;
       (zones as []).map((el: any) => (
         <div class="stat rounded-lg bg-base-200 overflow-hidden shadow-lg2">
           <a href={"/" + state + "/" + el[0]}>
-            <div class="stat-title">{el[0]}</div>
+            <div class="hidden stat-title">{el[0]}</div>
             <div class="stat-desc text-wrap">{el[1]}</div>
           </a>
         </div>
