--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -15,7 +15,9 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 					<div id={"zone-" + zone[0]} class="relative stat pt-0 pb-0">
 						<div class="stat-figure text-gray-400 bg-base-300">
 							<a
-								href="#"
+								role="button"
+								href="javascript:;"
+								tabindex="0"
 								class="absolute bottom-0 left-6 z-50"
 								title={"Set " + zone[0] + " as default location"}
 							>
