repair heart icon selectdaerah v9

--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -34,13 +34,14 @@ const states =
 			</div>
 			<div
 				tabindex="0"
-				class={"collapse collapse-arrow " +
+				class={"collapse collapse-arrow2 " +
 					(Object.keys(Astro.params).length < 2 ? "hidden2" : "")}
 			>
 				<input type="checkbox" class="peer" />
 				<div
 					class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
 				>
+					expand
 				</div>
 				<div
 					class="p-0 overflow-y-auto collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
