--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -16,7 +16,7 @@ const states =
 <main class="bg-base-100 sticky top-0 z-10">
 	<section class="subnav bg-base-100">
 		<div class="nav">
-			<div class="absolute z-10">
+			<div class="hidden absolute z-10">
 				<div class="flex home">
 					<a class="m-auto text-sm" href="/" title="back to home"
 						><svg
