--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -16,7 +16,7 @@ const states =
 <main class="bg-base-100 sticky top-0 z-10">
 	<section class="subnav bg-base-100">
 		<div class="nav">
-			<div class="hidden absolute z-10">
+			<div class="absolute z-10">
 				<div class="flex home">
 					<a class="m-auto text-sm" href="/" title="back to home"
 						><svg
@@ -34,17 +34,13 @@ const states =
 			</div>
 			<div
 				tabindex="0"
-				class={"collapse collapse-arrow2 " +
+				class={"collapse collapse-arrow " +
 					(Object.keys(Astro.params).length < 2 ? "hidden2" : "")}
 			>
 				<input type="checkbox" class="peer" />
+				<div class="collapse-title peer-checked:text-secondary-content"></div>
 				<div
-					class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
-				>
-					expand
-				</div>
-				<div
-					class="p-0 overflow-y-auto collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+					class="p-0 overflow-y-auto collapse-content peer-checked:text-secondary-content"
 				>
 					<SelectDaerah states={states} zones={zones} />
 				</div>
