--- a/src/pages/[state].astro
+++ b/src/pages/[state].astro
@@ -31,10 +31,9 @@ const { zones } = Astro.props;
   >
     {
       (zones as []).map((el: any) => (
-        <div class="stat rounded-lg bg-base-200">
+        <div class="stat rounded-lg bg-base-200 w-full">
           <a href={"/" + state + "/" + el[0]}>
-            <div class="hidden stat-title">{el[0]}</div>
-            <div class="stat-desc text-wrap">{el[1]}</div>
+            <span class="stat-desc text-wrap flex items-center">{el[1]}</span>
           </a>
         </div>
       ))
