--- a/src/pages/[state].astro
+++ b/src/pages/[state].astro
@@ -32,8 +32,8 @@ const { zones } = Astro.props;
     {
       (zones as []).map((el: any) => (
         <div class="stat rounded-lg bg-base-200 w-full">
-          <a href={"/" + state + "/" + el[0]}>
-            <span class="stat-desc text-wrap flex items-center">{el[1]}</span>
+          <a class="flex items-center" href={"/" + state + "/" + el[0]}>
+            <span class="stat-desc text-wrap">{el[1]}</span>
           </a>
         </div>
       ))
