--- a/src/pages/[state].astro
+++ b/src/pages/[state].astro
@@ -32,7 +32,7 @@ const { zones } = Astro.props;
     {
       (zones as []).map((el: any) => (
         <div class="stat rounded-lg bg-base-200">
-          <a class="flex items-center" href={"/" + state + "/" + el[0]}>
+          <a class="flex items-center w-full" href={"/" + state + "/" + el[0]}>
             <span class="stat-desc text-wrap">{el[1]}</span>
           </a>
         </div>
