--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -12,7 +12,7 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 		<div class="stats py-2 overflow-hidden -ml-5">
 			{
 				zones.map((zone: any) => (
-					<div id={"zone-" + zone[0]} class="relative stat pt-0 pb-0">
+					<div id={"zone-" + zone[0]} class="w-48 relative stat pt-0 pb-0">
 						<div class="stat-figure text-gray-400 bg-base-300">
 							<a
 								role="button"
@@ -48,7 +48,7 @@ const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 							</span>
 							<span
 								class={
-									"inline-block w-32 text-xs flex-initial break-words " +
+									"inline-block text-xs flex-initial break-words " +
 									(zone.indexOf(zoneParam) == 0
 										? "text-white"
 										: "text-gray-500")
