--- a/src/pages/[state].astro
+++ b/src/pages/[state].astro
@@ -33,7 +33,7 @@ const { zones } = Astro.props;
       (zones as []).map((el: any) => (
         <div class="stat rounded-lg bg-base-200 overflow-hidden">
           <a class="flex items-center w-full" href={"/" + state + "/" + el[0]}>
-            <span class="stat-desc2 text-wrap inline-block w-322 text-xs flex-initial2 break-words text-gray-500">
+            <span class="text-wrap inline-block text-xs break-words text-gray-500">
               {el[1]}
             </span>
           </a>
