--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -32,9 +32,22 @@ const states =
 					<SelectNegeri />
 				</div>
 			</div>
+			<div class="bg-base-200 collapse">
+				<input type="checkbox" class="peer" />
+				<div
+					class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+				>
+					Click me to show/hide content
+				</div>
+				<div
+					class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+				>
+					<p>hello</p>
+				</div>
+			</div>
 			<div
 				tabindex="0"
-				class={"collapse collapse-arrow " +
+				class={"hidden collapse collapse-arrow " +
 					(Object.keys(Astro.params).length < 2 ? "hidden2" : "")}
 			>
 				<input type="checkbox" class="peer" />
