--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -42,7 +42,7 @@ const states =
 				<div
 					class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
 				>
-					<p>hello</p>
+					<SelectDaerah states={states} zones={zones} />
 				</div>
 			</div>
 			<div
