--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -40,7 +40,7 @@ const states =
 					Click me to show/hide content
 				</div>
 				<div
-					class="collapse-content bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+					class="collapse-content overflow-y-auto bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
 				>
 					<SelectDaerah states={states} zones={zones} />
 				</div>
