--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -32,7 +32,7 @@ const states =
 					<SelectNegeri />
 				</div>
 			</div>
-			<div class="bg-base-200 collapse">
+			<div class="bg-base-200 collapse collapse-arrow">
 				<input type="checkbox" class="peer" />
 				<div
 					class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
