--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -32,14 +32,14 @@ const states =
 					<SelectNegeri />
 				</div>
 			</div>
-			<div class="bg-base-200 collapse collapse-arrow">
+			<div class="collapse collapse-arrow">
 				<input type="checkbox" class="peer" />
 				<div
-					class="collapse-title bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+					class="collapse-title text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
 				>
 				</div>
 				<div
-					class="collapse-content overflow-y-auto bg-primary text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
+					class="collapse-content overflow-y-auto text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"
 				>
 					<SelectDaerah states={states} zones={zones} />
 				</div>
