--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -39,7 +39,7 @@ const states =
 				>
 				</div>
 				<div
-					class="collapse-content overflow-y-auto text-primary-content peer-checked:bg-secondary2 peer-checked:text-secondary-content"
+					class="p-0 collapse-content overflow-y-auto text-primary-content peer-checked:bg-secondary2 peer-checked:text-secondary-content"
 				>
 					<SelectDaerah states={states} zones={zones} />
 				</div>
