--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -35,11 +35,11 @@ const states =
 			<div class="collapse collapse-arrow">
 				<input type="checkbox" class="peer" />
 				<div
-					class="collapse-title text-primary-content peer-checked:bg-secondary2 peer-checked:text-secondary-content"
+					class="collapse-title text-primary-content2 peer-checked:text-secondary-content"
 				>
 				</div>
 				<div
-					class="p-0 collapse-content overflow-y-auto text-primary-content peer-checked:bg-secondary2 peer-checked:text-secondary-content"
+					class="p-0 collapse-content overflow-y-auto text-primary-content2 peer-checked:text-secondary-content"
 				>
 					<SelectDaerah states={states} zones={zones} />
 				</div>
