--- a/src/layouts/Navigation.astro
+++ b/src/layouts/Navigation.astro
@@ -34,12 +34,9 @@ const states =
 			</div>
 			<div class="collapse collapse-arrow">
 				<input type="checkbox" class="peer" />
+				<div class="collapse-title peer-checked:text-secondary-content"></div>
 				<div
-					class="collapse-title text-primary-content2 peer-checked:text-secondary-content"
-				>
-				</div>
-				<div
-					class="p-0 collapse-content overflow-y-auto text-primary-content2 peer-checked:text-secondary-content"
+					class="p-0 collapse-content overflow-y-auto peer-checked:text-secondary-content"
 				>
 					<SelectDaerah states={states} zones={zones} />
 				</div>
