--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -25,36 +25,59 @@ const negeriLabel =
 	</svg>
 </button>
 <dialog id="my_modal_1" class="modal">
+	<div class="z-10">
+		<form method="dialog">
+			<button class="btn btn-circle btn-sm"
+				><svg
+					xmlns="http://www.w3.org/2000/svg"
+					class="h-4 w-4"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke="currentColor"
+					><path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						stroke-width="2"
+						d="M6 18L18 6M6 6l12 12"></path></svg
+				></button
+			>
+		</form>
+	</div>
+
 	<div class="modal-box">
-		<div
-			class="justify-between items-center modal-action m-0 sticky top-0 pl-4 bg-base-100 z-10"
-		>
-			<h2>Please select state</h2>
-			<form method="dialog">
-				<button class="btn btn-circle"
-					><svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="h-6 w-6"
-						fill="none"
-						viewBox="0 0 24 24"
-						stroke="currentColor"
-						><path
-							stroke-linecap="round"
-							stroke-linejoin="round"
-							stroke-width="2"
-							d="M6 18L18 6M6 6l12 12"></path></svg
-					></button
-				>
-			</form>
-		</div>
-		<ul tabindex="0" class="menu">
+		<div class="drawer auto-cols-auto">
 			{
-				Object.keys(Constants.locations).map((el: any) => (
-					<li>
-						<a href={"/" + el}>{el}</a>
-					</li>
+				Object.keys(Constants.locations).map((state: any) => (
+					<div>
+						<label class="py-2 block text-sm" for={"my-drawer-" + state}>
+							{state}
+						</label>
+						<input
+							id={"my-drawer-" + state}
+							type="checkbox"
+							class="drawer-toggle"
+						/>
+						<div class="drawer-side">
+							<label
+								for={"my-drawer-" + state}
+								aria-label="close sidebar"
+								class="drawer-overlay"
+							/>
+							<ul class="menu bg-base-200 text-base-content min-h-full w-80">
+								{Object.keys((Constants.locations as any)[state]).map(
+									(zone) => (
+										<li>
+											<a href={"/" + state + "/" + zone}>
+												{(Constants.locations as any)[state][zone]}
+											</a>
+										</li>
+									),
+								)}
+							</ul>
+						</div>
+					</div>
 				))
 			}
-		</ul>
+		</div>
 	</div>
 </dialog>
