--- a/src/pages/[state].astro
+++ b/src/pages/[state].astro
@@ -13,7 +13,7 @@ export async function getStaticPaths() {
         params: { state, zone },
         props: {
           zones: Object.entries(zones),
-          location: zones[zone as keyof typeof zones],
+          //location: zones[zone as keyof typeof zones],
         },
       });
     }
