--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -63,7 +63,7 @@ const negeriLabel =
 								aria-label="close sidebar"
 								class="drawer-overlay"
 							/>
-							<ul class="menu bg-base-200 text-base-content min-h-full w-80">
+							<ul class="menu bg-base-200 text-base-content min-h-full w-80 p-6">
 								{Object.keys((Constants.locations as any)[state]).map(
 									(zone) => (
 										<li>
@@ -73,6 +73,9 @@ const negeriLabel =
 										</li>
 									),
 								)}
+								<li class="hidden bg-gray-900">
+									<a>Back</a>
+								</li>
 							</ul>
 						</div>
 					</div>
