--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -8,9 +8,11 @@
 	);
 </script>
 
-<footer class="footer-center p-6 text-base-content sticky top-[100vh]" <aside>
-	<a class="inline-block text-xs" href="/" title="back to home"> adhan.app </a>
-	<div class="dropdown dropdown-top dropdown-end">
+<footer class="nav p-6 text-base-content sticky top-[100vh]" <aside>
+	<a class="hidden inline-block2 text-xs" href="/" title="back to home">
+		adhan.app
+	</a>
+	<div class="-ml-5 dropdown dropdown-top">
 		<div tabindex="0" role="button" class="btn btn-ghost text-sm m-1">...</div>
 		<ul
 			tabindex="0"
