--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,13 +50,12 @@ const { title, state, zones } = Astro.props;
 	header {
 		line-height: 1.6;
 	}
-	main .nav {
-		position: relative;
+	.nav {
 		margin: auto;
 		width: 1200px;
 		max-width: calc(100% - 2rem);
 	}
-	main .subnav {
+	.subnav {
 		top: 0;
 		z-index: 1;
 		position: sticky;
