--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -13,7 +13,7 @@
 		adhan.app
 	</a>
 	<div class="-ml-5 dropdown dropdown-top">
-		<div tabindex="0" role="button" class="btn btn-ghost text-sm m-1">...</div>
+		<div tabindex="0" role="button" class="btn btn-ghost text-sm">...</div>
 		<ul
 			tabindex="0"
 			class="dropdown-content z-[1] menu p-2 shadow bg-base-200 rounded-box w-52"
