--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -42,7 +42,7 @@ const { hijri, date, day } = await getPrayerTimeDatas();
 ---
 
 <div class="nav py-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10">
-  <div class="p-4 bg-base-200 border rounded-box border-gray-700">
+  <div class="p-4 bg-base-200 border2 rounded-box border-gray-700">
     <div class="flex pb-4">
       <ul class="text-xs text-gray-400">
         <li class="hidden">{hijri}</li>
@@ -52,10 +52,10 @@ const { hijri, date, day } = await getPrayerTimeDatas();
     </div>
     <h3>{location}</h3>
   </div>
-  <div class="p-4 border rounded-box border-gray-700">
+  <div class="p-4 rounded-box shadow bg-base-200">
     <PrayerTimeTable data={await getPrayerTimeDatas()} />
   </div>
-  <div class="p-4 border rounded-box border-gray-700">
+  <div class="p-4 border shadow rounded-box bg-base-200 border-base-200">
     <RandomTazkirah />
   </div>
 </div>
