--- a/src/components/RandomTazkirah.astro
+++ b/src/components/RandomTazkirah.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="text-sm leading-10 font-mono text-gray-400">
+<div class="text-sm p-10 leading-10 font-mono text-gray-100">
   "Dan kalaulah (amal yang seberat zarrah) itu amal kebajikan, nescaya akan
   menggandakannya dan akan memberi, dari sisiNya, pahala yang amat besar" [Surah
   an-Nisa' 40]
