--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -49,7 +49,7 @@ const negeriLabel =
 			{
 				Object.keys(Constants.locations).map((state: any) => (
 					<div>
-						<label class="py-2 block text-sm" for={"my-drawer-" + state}>
+						<label class="py-2 block text-xs" for={"my-drawer-" + state}>
 							{state}
 						</label>
 						<input
@@ -68,7 +68,7 @@ const negeriLabel =
 									(zone) => (
 										<li>
 											<a
-												class="text-sm py-2 block"
+												class="text-xs py-2 block"
 												href={"/" + state + "/" + zone}
 											>
 												{(Constants.locations as any)[state][zone]}
