--- a/src/components/SelectDaerah.astro
+++ b/src/components/SelectDaerah.astro
@@ -2,7 +2,7 @@
 import Constants from "../constants";
 const { states, zones } = Astro.props;
 const { zone } = Astro.params;
-import "../style/animation.scss";
+import "../styles/animation.scss";
 
 const zoneParam = zone ? zone : Constants.defaultSettings.zone;
 ---
