--- a/src/components/SelectNegeri.astro
+++ b/src/components/SelectNegeri.astro
@@ -45,7 +45,7 @@ const negeriLabel =
 	</div>
 
 	<div class="modal-box border rounded-box border-gray-700">
-		<div class="drawer auto-cols-auto">
+		<div class="drawer drawer-end auto-cols-auto">
 			{
 				Object.keys(Constants.locations).map((state: any) => (
 					<div>
