--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navigation from "../layouts/Navigation.astro";
 import Footer from "../layouts/Footer.astro";
+import "../styles/main.scss";
 
 interface Props {
 	title: string;
@@ -12,12 +13,19 @@ const { title, state, zones } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" data-theme="dracula">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="adhan.app : waktu solat Malaysia" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<!--<link
+			rel="preload"
+			href="/fonts/inter.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin
+		/>-->
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -42,7 +50,6 @@ const { title, state, zones } = Astro.props;
 		);
 	}
 	html {
-		font-family: system-ui, sans-serif;
 		background: #13151a;
 		background-size: 224px;
 	}
