--- a/src/components/PrayerTimeTable.astro
+++ b/src/components/PrayerTimeTable.astro
@@ -6,7 +6,7 @@ const { hijri, date, day, ...prayerTime } = data;
 ---
 
 <div class="overflow-x-auto">
- <table class="table">
+ <table class="table text-center">
   <thead>
    <tr>
     <th>Waktu</th>
