--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import { Toaster } from "react-hot-toast";
 import Navigation from "../components/Navigation";
 import Footer from "../layouts/Footer.astro";
@@ -24,6 +25,7 @@ const { zone } = Astro.params;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body class="min-h-screen" tabindex="0">
 		<Navigation
