--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,6 +24,11 @@ const { zone } = Astro.params;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<script
+			is:inline
+			defer
+			src="https://cloud.umami.is/script.js"
+			data-website-id="170a0c1b-cf8b-42d5-86b1-74c50f0ebdf5"></script>
 		<title>{title}</title>
 		<ViewTransitions />
 	</head>
